crates/macro-tools/tests/ui/builder/fail/reserved_new.rs
use picea_macro_tools::Builder;

#[derive(Builder)]
struct Meta {
    new: String,
}

fn main() {}
