crates/macro-tools/tests/ui/builder/fail/reserved_new.stderr
error: `new` is reserved by Builder; rename the field to avoid colliding with generated methods
 --> tests/ui/builder/fail/reserved_new.rs:5:5
  |
5 |     new: String,
  |     ^^^
